--- a/doc.tex
+++ b/doc.tex
@@ -6,16 +6,31 @@
 \usetikzlibrary{shapes,arrows}
 \usepackage{verbatim}
 
+\usetikzlibrary{graphs}
+
+
+\def\disone{1.2cm}
+\def\distwo{2cm}
+\def\disthree{1.5cm} 
+
+ 
 \begin{document}
 
 
 \tikzset{%
-  block/.style    = {draw, thick, rectangle, minimum height = 3em,
-    minimum width = 3em},
-  sum/.style      = {draw, circle, node distance = 2cm}, % Adder
+  block/.style    = {draw, thick, rectangle, minimum height = 2em,
+    minimum width = 1em,node distance = 1.5cm}, 
+  sum/.style      = {draw, circle, node distance =1cm}, % Adder
   input/.style    = {coordinate}, % Input
   output/.style   = {coordinate}, % Output
   pinstyle/.style = {pin edge={to-,thin,black}},
+  adpoint/.style = {coordinate},
+}
+
+\tikzset{global scale/.style={
+    scale=#1,
+    every node/.append style={scale=#1}
+  }
 }
 
 %\newpage
